Сделан адаптив проекта, кроме 2 секций

--- a/src/sass/blocks/_problems.scss
+++ b/src/sass/blocks/_problems.scss
@@ -33,4 +33,13 @@
             background: url('../img/problems/icon-check.svg') no-repeat;
         }
     }
+    &__image-mobile-one {
+        display: none;
+    }
+    &__image-mobile-two {
+        display: none;
+    }
+    &__image-mobile-three {
+        display: none;
+    }
 }
