--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -68,4 +68,23 @@
         width: 270px;
         height: 60px;
     }
+    &__burger {
+        width: 40px;
+        height: 33px;
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        cursor: pointer;
+    }
+
+    &__burger__line {
+        width: 100%;
+        height: 5px;
+        border-radius: 5px;
+        background: #1B1B1B;
+    }
+    &__texts-mobile {
+        display: none;
+    }
 }
