--- a/src/sass/blocks/_info.scss
+++ b/src/sass/blocks/_info.scss
@@ -45,4 +45,10 @@
         height: 60px;
         margin-left: 30px;
     }
+    &__image-mobile-one {
+        display: none;
+    }
+    &__image-mobile-two {
+        display: none;
+    }
 }
