--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,5 +14,6 @@
 @import 'blocks/services';
 @import 'blocks/questions';
 @import 'blocks/footer';
+@import 'blocks/menu';
 @import 'blocks/modal';
 @import 'blocks/media';
